--- a/TaskMaster/BaseApp/templates/BaseApp/home.html
+++ b/TaskMaster/BaseApp/templates/BaseApp/home.html
@@ -1,60 +1,323 @@
 {% extends 'main.html' %}
 {% load static %}
-{% block style %}
-<link rel="stylesheet" href="{% static 'style/home.css' %}">
-{% endblock style %}
+
 {% block content %}
-<div id="calendar-container">
-</div>
-<div id="upcoming-list-container">
-        
-<ul id="upcoming-task-list" title="Upcoming tasks">
-    <!-- {% for item in items %}
-    <li class="upcoming-element">
-        
-            <div class="upcoming-element-text">
-                <div style="float: left;">0{{forloop.counter}}.&nbsp</div><div>{{item.title}}</div>  
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <p class="text-white mt-5 mb-5">Welcome back, <b id="user-name"></b></p>
+        </div>
+    </div>
+    <!-- row -->
+    <div class="row tm-content-row">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 tm-block-col">
+            <div class="tm-bg-primary-dark tm-block">
+                <h2 class="tm-block-title">tasks per month</h2>
+                <canvas id="lineChart"></canvas>
             </div>
-            <label class="container">
-                <input type="checkbox">
-                <span class="checkmark"></span>
-            </label>
-        
-         
-    </li>
-
-    {% endfor %} -->
-</ul>
-
-</div>
-<div id="random-list-container">
-        <ul id="random-task-list" title="{{random_list.title}}">
-            {% for item in random %}
-            <li class="random-element">
-        
-                <div class="random-element-text">
-                    <div style="float: left;">0{{forloop.counter}}.&nbsp</div>
-                    <div>{{item.title}}</div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 tm-block-col">
+            <div class="tm-bg-primary-dark tm-block">
+                <h2 class="tm-block-title">task per category</h2>
+                <canvas id="barChart"></canvas>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 tm-block-col">
+            <div class="tm-bg-primary-dark tm-block tm-block-taller">
+                <h2 class="tm-block-title">finished/pending/moving</h2>
+                <div id="pieChartContainer">
+                    <canvas id="pieChart" class="chartjs-render-monitor" width="200" height="200"></canvas>
                 </div>
-                <label class="container">
-                    <input type="checkbox">
-                    <span class="checkmark"></span>
-                </label>
-        
-        
-            </li>
-        
-            {% endfor %}
-        </ul>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 tm-block-col">
+            <div class="tm-bg-primary-dark tm-block tm-block-taller tm-block-overflow">
+                <h2 class="tm-block-title">Notification List</h2>
+                <div class="tm-notification-items">
+                    <div class="media tm-notification-item">
+                        <div class="tm-gray-circle"><img src="{% static 'images/notification-01.jpg' %}" alt="Avatar Image"
+                                class="rounded-circle"></div>
+                        <div class="media-body">
+                            <p class="mb-2"><b>Jessica</b> and <b>6 others</b> sent you new <a href="#"
+                                    class="tm-notification-link">product updates</a>. Check new orders.</p>
+                            <span class="tm-small tm-text-color-secondary">6h ago.</span>
+                        </div>
+                    </div>
+                    <div class="media tm-notification-item">
+                        <div class="tm-gray-circle"><img src="{% static 'images/notification-02.jpg' %}" alt="Avatar Image"
+                                class="rounded-circle"></div>
+                        <div class="media-body">
+                            <p class="mb-2"><b>Oliver Too</b> and <b>6 others</b> sent you existing <a href="#"
+                                    class="tm-notification-link">product updates</a>. Read more reports.</p>
+                            <span class="tm-small tm-text-color-secondary">6h ago.</span>
+                        </div>
+                    </div>
+                    <div class="media tm-notification-item">
+                        <div class="tm-gray-circle"><img src="{% static 'images/notification-03.jpg' %}" alt="Avatar Image"
+                                class="rounded-circle"></div>
+                        <div class="media-body">
+                            <p class="mb-2"><b>Victoria</b> and <b>6 others</b> sent you <a href="#"
+                                    class="tm-notification-link">order updates</a>. Read order information.</p>
+                            <span class="tm-small tm-text-color-secondary">6h ago.</span>
+                        </div>
+                    </div>
+                    <div class="media tm-notification-item">
+                        <div class="tm-gray-circle"><img src="{% static 'images/notification-01.jpg' %}" alt="Avatar Image"
+                                class="rounded-circle"></div>
+                        <div class="media-body">
+                            <p class="mb-2"><b>Laura Cute</b> and <b>6 others</b> sent you <a href="#"
+                                    class="tm-notification-link">product records</a>.</p>
+                            <span class="tm-small tm-text-color-secondary">6h ago.</span>
+                        </div>
+                    </div>
+                    <div class="media tm-notification-item">
+                        <div class="tm-gray-circle"><img src="{% static 'images/notification-02.jpg' %}" alt="Avatar Image"
+                                class="rounded-circle"></div>
+                        <div class="media-body">
+                            <p class="mb-2"><b>Samantha</b> and <b>6 others</b> sent you <a href="#"
+                                    class="tm-notification-link">order stuffs</a>.</p>
+                            <span class="tm-small tm-text-color-secondary">6h ago.</span>
+                        </div>
+                    </div>
+                    <div class="media tm-notification-item">
+                        <div class="tm-gray-circle"><img src="{% static 'images/notification-03.jpg' %}" alt="Avatar Image"
+                                class="rounded-circle"></div>
+                        <div class="media-body">
+                            <p class="mb-2"><b>Sophie</b> and <b>6 others</b> sent you <a href="#"
+                                    class="tm-notification-link">product updates</a>.</p>
+                            <span class="tm-small tm-text-color-secondary">6h ago.</span>
+                        </div>
+                    </div>
+                    <div class="media tm-notification-item">
+                        <div class="tm-gray-circle"><img src="{% static 'images/notification-01.jpg' %}" alt="Avatar Image"
+                                class="rounded-circle"></div>
+                        <div class="media-body">
+                            <p class="mb-2"><b>Lily A</b> and <b>6 others</b> sent you <a href="#"
+                                    class="tm-notification-link">product updates</a>.</p>
+                            <span class="tm-small tm-text-color-secondary">6h ago.</span>
+                        </div>
+                    </div>
+                    <div class="media tm-notification-item">
+                        <div class="tm-gray-circle"><img src="{% static 'images/notification-02.jpg' %}" alt="Avatar Image"
+                                class="rounded-circle"></div>
+                        <div class="media-body">
+                            <p class="mb-2"><b>Amara</b> and <b>6 others</b> sent you <a href="#"
+                                    class="tm-notification-link">product updates</a>.</p>
+                            <span class="tm-small tm-text-color-secondary">6h ago.</span>
+                        </div>
+                    </div>
+                    <div class="media tm-notification-item">
+                        <div class="tm-gray-circle"><img src="{% static 'images/notification-03.jpg' %}" alt="Avatar Image"
+                                class="rounded-circle"></div>
+                        <div class="media-body">
+                            <p class="mb-2"><b>Cinthela</b> and <b>6 others</b> sent you <a href="#"
+                                    class="tm-notification-link">product updates</a>.</p>
+                            <span class="tm-small tm-text-color-secondary">6h ago.</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 tm-block-col">
+            <div class="tm-bg-primary-dark tm-block tm-block-taller tm-block-scroll">
+                <h2 class="tm-block-title">tasks to do</h2>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">DONE</th>
+                            <th scope="col">TITLE</th>
+                            <th scope="col">CATEGORY</th>
+                            <th scope="col">LIST</th>
+                            <th scope="col">STATUS</th>
+                            <th scope="col">CREATED DATE</th>
+                            <th scope="col">DUE DATE</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            
+                            <td><b>✓</b></td>
+                            <td><b>buy vegetables</b></td>
+                            <td><b>cooking</b></td>
+                            <td><b>do in the city</b></td>
+                            <td>
+                                <div class="tm-status-circle moving">
+                                </div>Moving
+                            </td>
+                            <td>16:00, 12 NOV 2018</td>
+                            <td>08:00, 18 NOV 2018</td>
+                        </tr>
+                        <tr>
+                            
+                            <td><b>☐</b></td>
+                            <td><b>repair bicycle</b></td>
+                            <td><b>home works</b></td>
+                            <td><b>do in home</b></td>
+                            <td>
+                                <div class="tm-status-circle pending">
+                                </div>Pending
+                            </td>
+                            <td>11:00, 10 NOV 2018</td>
+                            <td>04:00, 14 NOV 2018</td>
+                        </tr>
+                        <tr>
+                            
+                            <td><b>☐</b></td>
+                            <td><b>do a homework</b></td>
+                            <td><b>shool</b></td>
+                            <td><b>do in home</b></td>
+                            <td>
+                                <div class="tm-status-circle cancelled">
+                                </div>Cancelled
+                            </td>
+                            <td>12:00, 22 NOV 2018</td>
+                            <td>06:00, 28 NOV 2018</td>
+                        </tr>
+                        <tr>
+                            
+                            <td><b>☐</b></td>
+                            <td><b>tidy your room</b></td>
+                            <td><b>home works</b></td>
+                            <td><b>do in home</b></td>
+                            <td>
+                                <div class="tm-status-circle moving">
+                                </div>Moving
+                            </td>
+                            <td>15:00, 10 NOV 2018</td>
+                            <td>09:00, 14 NOV 2018</td>
+                        </tr>
+                        <tr>
+                            
+                            <td><b>☐</b></td>
+                            <td><b>make dinner</b></td>
+                            <td><b>cooking</b></td>
+                            <td><b>do in home</b></td>
+                            <td>
+                                <div class="tm-status-circle pending">
+                                </div>Pending
+                            </td>
+                            <td>15:00, 11 NOV 2018</td>
+                            <td>09:00, 17 NOV 2018</td>
+                        </tr>
+                        <tr>
+                           
+                            <td><b>✓</b></td>
+                            <td><b>send emails</b></td>
+                            <td><b>work</b></td> 
+                            <td><b>important</b></td>
+                            <td>
+                                <div class="tm-status-circle pending">
+                                </div>Pending
+                            </td>
+                            <td>18:00, 12 OCT 2018</td>
+                            <td>06:00, 18 OCT 2018</td>
+                        </tr>
+                        <tr>
+                            
+                            <td><b>☐</b></td>
+                            <td><b>go on match</b></td>
+                            <td><b>entertainment</b></td>
+                            <td><b>for kids</b></td>
+                            <td>
+                                <div class="tm-status-circle moving">
+                                </div>Moving
+                            </td>
+                            <td>12:00, 10 OCT 2018</td>
+                            <td>08:00, 18 OCT 2018</td>
+                        </tr>
+                        <tr>
+                            
+                            <td><b>✓</b></td>
+                            <td><b>learn to an exam</b></td>
+                            <td><b>shool</b></td>
+                            <td><b>for kids</b></td>
+                            <td>
+                                <div class="tm-status-circle moving">
+                                </div>Moving
+                            </td>
+                            <td>15:30, 06 OCT 2018</td>
+                            <td>09:30, 16 OCT 2018</td>
+                        </tr>
+                        <tr>
+                            
+                            <td><b>☐</b></td>
+                            <td><b>read a book</b></td>
+                            <td><b>entertainment</b></td>
+                            <td><b>for kids</b></td>
+                            <td>
+                                <div class="tm-status-circle moving">
+                                </div>Moving
+                            </td>
+                            <td>11:00, 10 OCT 2018</td>
+                            <td>03:00, 14 OCT 2018</td>
+                        </tr>
+                        <tr>
+                            
+                            <td><b>☐</b></td>
+                            <td><b>play a games</b></td>
+                            <td><b>entertainment</b></td>
+                            <td><b>for kids</b></td>
+                            <td>
+                                <div class="tm-status-circle cancelled">
+                                </div>Cancelled
+                            </td>
+                            <td>17:30, 12 OCT 2018</td>
+                            <td>08:30, 22 OCT 2018</td>
+                        </tr>
+                        <tr>
+                            
+                            <td><b>☐</b></td>
+                            <td><b>play football</b></td>
+                            <td><b>entertainment</b></td>
+                            <td><b>for kids</b></td>
+                            <td>
+                                <div class="tm-status-circle moving">
+                                </div>Moving
+                            </td>
+                            <td>15:00, 12 OCT 2018</td>
+                            <td>09:20, 26 OCT 2018</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
-<div id="chart-container">
-
-</div>
-<div id="messages-container">
-
-</div>
-
 {% endblock content %}
 {% block script %}
+<script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+<!-- https://jquery.com/download/ -->
+<script src="{% static 'js/moment.min.js' %}"></script>
+<!-- https://momentjs.com/ -->
+<script src="{% static 'js/Chart.min.js' %}"></script>
+<!-- http://www.chartjs.org/docs/latest/ -->
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<!-- https://getbootstrap.com/ -->
+<script src="{% static 'js/tooplate-scripts.js' %}"></script>
+<script>
+    Chart.defaults.global.defaultFontColor = 'white';
+    let ctxLine,
+        ctxBar,
+        ctxPie,
+        optionsLine,
+        optionsBar,
+        optionsPie,
+        configLine,
+        configBar,
+        configPie,
+        lineChart;
+    barChart, pieChart;
+    // DOM is ready
+    $(function () {
+        drawLineChart(); // Line Chart
+        drawBarChart(); // Bar Chart
+        drawPieChart(); // Pie Chart
+
+        $(window).resize(function () {
+            updateLineChart();
+            updateBarChart();
+        });
+    })
+</script>
 <script src="{% static 'js/home.js' %}"></script>
 {% endblock %}
